--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,9 +1,31 @@
-header, footer{
-    height: 100px;
-    font-size:26px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #212121;
-    color: #ffffff;
+header,
+footer {
+	height: 100px;
+	font-size: 26px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	background-color: #212121;
+	color: #ffffff;
+}
+.landing-main {
+	background-image: url('../img/main.jpg');
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	height: 577px !important;
+	/* filter: blur(8px);
+	-webkit-filter: blur(8px); */
+}
+.main-content {
+	top: 40px;
+	background-color: rgb(0, 0, 0); /* Fallback color */
+	background-color: rgba(0, 0, 0, 0.4); /* Black w/opacity/see-through */
+	color: white;
+	font-weight: bold;
+
+	position: absolute;
+	z-index: 2;
+}
+.imbd-logo {
+	width: 60px;
 }
